# HW-Asset-Intelligence-And-Analytics

./: README.md
Data-Ingestion-Extraction/: CSAM-org-acronym.xlsx  README.md  all_system_inventory.py  config.yml.example  inventory.py  osa_ac2.py  process_generate_hosts.py  pyproject.toml
Data-Ingestion-Extraction/csam_inventory/: diff_csam.py  swam_csam.py
Data-Ingestion-Extraction/csam_inventory/data_extraction/: excel.py  word.py
Data-Ingestion-Extraction/data/: checkFirstRow.py  checkFirstRowNewTemplate.py  combine-SWAM.py  combine.py  combineNewTemplate-RemoveExtraSheets.py  combineSeperateWB.py  conditionalDeleteUnwantedRows.py  deleteUnwantedRows.py  findCellsWithFormula.py  findCellsWithFormulaUsingXML.py  insertMissingColumnsCSAMTemplate.py  insertMissingColumnsNewTemplate.py  invalidXML.py  seperateNew-Old-Latest-TemplateHW.py  seperateOldTemplateHW.py  sequencialCleanup.py  v-2-3-conditionalDeleteUnwantedRows.py
Data-Ingestion-Extraction/inventory/: __init__.py  csam.py  extract.py  log.py  utils.py
Data-Ingestion-Extraction/inventory/data_extraction/: __init__.py  utils.py  zip_archive.py
Data-Wrangling/: appendCSV.py  clear_tuple_02202025.py  clear_tuple_generate_hosts_new_template.py  concat-587-593.py  concatCSV-02012024.py  concatCSV-02202025.py  concatCSV-commentOut-07262024.py  concatCSV.py  generate_hosts_01192024.py  generate_hosts_02202025.py  hostnames_eMNS.py  statsData.py  updated_generate_hosts.py  updated_generate_hosts_02202025.py
